--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,16 +1,11 @@
-<html>
-    <head>
-        <title>Madeleines first blog</title>
-    </head>
-    <body>
-        <div>
-            <strong>Friday, June 14 2019</strong>
+<div>
+    <h1><a href="/">Django Girls Blog</a></h1>
+</div>
 
-        <div>
-            <h1>Madeleines first blog</h1>
-        <div>
-        <div>
-                <h2>About me</h2>
-                <p>My name is Madeleine. I am 23 years old and originally from Berlin, Germany.<br> I study law at the University of Cologne and University College London.<br> My website:</p>
-                <a href="https://madeleinemd.org">link</a>
-    <body>
+{% for post in posts %}
+    <div>
+        <p>published: {{ post.published_date }}</p>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
